--- a/.azure-pipelines/weekly-generation.yml
+++ b/.azure-pipelines/weekly-generation.yml
@@ -117,6 +117,8 @@ extends:
         timeoutInMinutes: 840
         variables:
           ModulesMatrix: $[ dependencies.SetUpModuleMatrix.outputs['CreateMatrixJson.matrixJson'] ]
+          ${{ if eq(parameters.SkipOpenAPIDocsDownload, false) }}:
+            Branch: $[ dependencies.RefreshOpenAPIDocuments.outputs['ComputeBranch.Branch'] ]
         templateContext:
           outputs:
           - ${{ if and(eq(parameters.Pack, true), eq(parameters.Sign, true)) }}:
@@ -153,6 +155,8 @@ extends:
           - MsGraphPsSdkWeeklyGeneration
           - RefreshOpenAPIDocuments
         condition: and(succeeded(), eq(dependencies.MsGraphPsSdkWeeklyGeneration.result, 'Succeeded'), eq(${{ parameters.CreatePullRequest }}, true), eq(${{ parameters.SkipOpenAPIDocsDownload }}, false))
+        variables:
+          Branch: $[ dependencies.RefreshOpenAPIDocuments.outputs['ComputeBranch.Branch'] ]
         steps:
         - template: .azure-pipelines/common-templates/checkout.yml@self
           parameters:
