--- a/openApiDocs/beta/Sites.yml
+++ b/openApiDocs/beta/Sites.yml
@@ -6158,6 +6158,8 @@ paths:
                   $ref: '#/components/schemas/microsoft.graph.dlpEvaluationInput'
                 notificationInfo:
                   $ref: '#/components/schemas/microsoft.graph.dlpNotification'
+                classifyText:
+                  $ref: '#/components/schemas/microsoft.graph.textClassificationRequest'
               additionalProperties:
                 type: object
         required: true
@@ -93920,6 +93922,31 @@ components:
           nullable: true
       additionalProperties:
         type: object
+    microsoft.graph.textClassificationRequest:
+      allOf:
+        - $ref: '#/components/schemas/microsoft.graph.entity'
+        - title: textClassificationRequest
+          type: object
+          properties:
+            contentMetaData:
+              $ref: '#/components/schemas/microsoft.graph.classificationRequestContentMetaData'
+            fileExtension:
+              type: string
+              nullable: true
+            matchTolerancesToInclude:
+              $ref: '#/components/schemas/microsoft.graph.mlClassificationMatchTolerance'
+            scopesToRun:
+              $ref: '#/components/schemas/microsoft.graph.sensitiveTypeScope'
+            sensitiveTypeIds:
+              type: array
+              items:
+                type: string
+                nullable: true
+            text:
+              type: string
+              nullable: true
+          additionalProperties:
+            type: object
     microsoft.graph.dlpEvaluatePoliciesJobResponse:
       allOf:
         - $ref: '#/components/schemas/microsoft.graph.jobResponseBase'
@@ -95610,7 +95637,6 @@ components:
       title: siteTemplateType
       enum:
         - sitepagepublishing
-        - group
         - sts
         - unknownFutureValue
       type: string
@@ -99021,6 +99047,7 @@ components:
               nullable: true
             welcomeMessageEnabled:
               type: boolean
+              description: 'Indicates whether a welcome message is sent to new members when they are added to the group. The default value is true. Returned only on $select. Supported only on the Get group API (GET /groups/{ID}).'
               nullable: true
             writebackConfiguration:
               $ref: '#/components/schemas/microsoft.graph.groupWritebackConfiguration'
@@ -101118,6 +101145,31 @@ components:
         - removableDataVolume
         - unknownFutureValue
       type: string
+    microsoft.graph.classificationRequestContentMetaData:
+      title: classificationRequestContentMetaData
+      type: object
+      properties:
+        sourceId:
+          type: string
+          nullable: true
+      additionalProperties:
+        type: object
+    microsoft.graph.mlClassificationMatchTolerance:
+      title: mlClassificationMatchTolerance
+      enum:
+        - exact
+        - near
+      type: string
+      x-ms-enum-flags:
+        isFlags: true
+    microsoft.graph.sensitiveTypeScope:
+      title: sensitiveTypeScope
+      enum:
+        - fullDocument
+        - partialDocument
+      type: string
+      x-ms-enum-flags:
+        isFlags: true
     microsoft.graph.jobResponseBase:
       allOf:
         - $ref: '#/components/schemas/microsoft.graph.entity'
@@ -101300,6 +101352,7 @@ components:
         - encryptedProtectionTypeNotSupportedException
         - purviewClaimsChallengeNotSupportedException
         - exception
+        - labelNotFoundException
         - unknownFutureValue
       type: string
       x-ms-enum-flags:
@@ -104936,6 +104989,7 @@ components:
         - resizePendingLicense
         - updatingSingleSignOn
         - modifyingSingleSignOn
+        - refreshPolicyConfiguration
         - preparing
       type: string
     microsoft.graph.cloudPcStatusDetail:
@@ -116748,6 +116802,8 @@ components:
           $ref: '#/components/schemas/microsoft.graph.audiencesConfiguration'
         identifierUris:
           $ref: '#/components/schemas/microsoft.graph.identifierUriConfiguration'
+        redirectUris:
+          $ref: '#/components/schemas/microsoft.graph.redirectUriConfiguration'
       additionalProperties:
         type: object
     microsoft.graph.customClaimConfiguration:
@@ -120540,6 +120596,22 @@ components:
           $ref: '#/components/schemas/microsoft.graph.identifierUriRestriction'
       additionalProperties:
         type: object
+    microsoft.graph.redirectUriConfiguration:
+      title: redirectUriConfiguration
+      type: object
+      properties:
+        uriWithBlockedDomain:
+          $ref: '#/components/schemas/microsoft.graph.redirectUriBlockedDomainConfiguration'
+        uriWithBlockedScheme:
+          $ref: '#/components/schemas/microsoft.graph.redirectUriBlockedSchemeConfiguration'
+        uriWithoutAllowedDomain:
+          $ref: '#/components/schemas/microsoft.graph.redirectUriAllowedDomainConfiguration'
+        uriWithoutAllowedScheme:
+          $ref: '#/components/schemas/microsoft.graph.redirectUriAllowedSchemeConfiguration'
+        uriWithWildcard:
+          $ref: '#/components/schemas/microsoft.graph.redirectUriWildcardConfiguration'
+      additionalProperties:
+        type: object
     microsoft.graph.customClaimAttributeBase:
       title: customClaimAttributeBase
       type: object
@@ -121550,6 +121622,142 @@ components:
           $ref: '#/components/schemas/microsoft.graph.appManagementRestrictionState'
       additionalProperties:
         type: object
+    microsoft.graph.redirectUriBlockedDomainConfiguration:
+      title: redirectUriBlockedDomainConfiguration
+      type: object
+      properties:
+        blockedDomains:
+          type: array
+          items:
+            type: string
+        excludeActors:
+          $ref: '#/components/schemas/microsoft.graph.appManagementPolicyActorExemptions'
+        isStateSetByMicrosoft:
+          type: boolean
+          readOnly: true
+        publicClient:
+          $ref: '#/components/schemas/microsoft.graph.redirectUriPlatformBlockedDomainConfiguration'
+        restrictForAppsCreatedAfterDateTime:
+          pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
+          type: string
+          format: date-time
+          nullable: true
+        spa:
+          $ref: '#/components/schemas/microsoft.graph.redirectUriPlatformBlockedDomainConfiguration'
+        state:
+          $ref: '#/components/schemas/microsoft.graph.appManagementRestrictionState'
+        web:
+          $ref: '#/components/schemas/microsoft.graph.redirectUriPlatformBlockedDomainConfiguration'
+      additionalProperties:
+        type: object
+    microsoft.graph.redirectUriBlockedSchemeConfiguration:
+      title: redirectUriBlockedSchemeConfiguration
+      type: object
+      properties:
+        blockedSchemes:
+          type: array
+          items:
+            type: string
+        excludeActors:
+          $ref: '#/components/schemas/microsoft.graph.appManagementPolicyActorExemptions'
+        exemptFormats:
+          type: array
+          items:
+            type: string
+        isStateSetByMicrosoft:
+          type: boolean
+          readOnly: true
+        publicClient:
+          $ref: '#/components/schemas/microsoft.graph.redirectUriPlatformBlockedSchemeConfiguration'
+        restrictForAppsCreatedAfterDateTime:
+          pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
+          type: string
+          format: date-time
+          nullable: true
+        spa:
+          $ref: '#/components/schemas/microsoft.graph.redirectUriPlatformBlockedSchemeConfiguration'
+        state:
+          $ref: '#/components/schemas/microsoft.graph.appManagementRestrictionState'
+        web:
+          $ref: '#/components/schemas/microsoft.graph.redirectUriPlatformBlockedSchemeConfiguration'
+      additionalProperties:
+        type: object
+    microsoft.graph.redirectUriAllowedDomainConfiguration:
+      title: redirectUriAllowedDomainConfiguration
+      type: object
+      properties:
+        allowedDomains:
+          type: array
+          items:
+            type: string
+        excludeActors:
+          $ref: '#/components/schemas/microsoft.graph.appManagementPolicyActorExemptions'
+        isStateSetByMicrosoft:
+          type: boolean
+          readOnly: true
+        publicClient:
+          $ref: '#/components/schemas/microsoft.graph.redirectUriPlatformAllowedDomainConfiguration'
+        restrictForAppsCreatedAfterDateTime:
+          pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
+          type: string
+          format: date-time
+          nullable: true
+        spa:
+          $ref: '#/components/schemas/microsoft.graph.redirectUriPlatformAllowedDomainConfiguration'
+        state:
+          $ref: '#/components/schemas/microsoft.graph.appManagementRestrictionState'
+        web:
+          $ref: '#/components/schemas/microsoft.graph.redirectUriPlatformAllowedDomainConfiguration'
+      additionalProperties:
+        type: object
+    microsoft.graph.redirectUriAllowedSchemeConfiguration:
+      title: redirectUriAllowedSchemeConfiguration
+      type: object
+      properties:
+        allowedSchemes:
+          type: array
+          items:
+            type: string
+        excludeActors:
+          $ref: '#/components/schemas/microsoft.graph.appManagementPolicyActorExemptions'
+        isStateSetByMicrosoft:
+          type: boolean
+          readOnly: true
+        publicClient:
+          $ref: '#/components/schemas/microsoft.graph.redirectUriPlatformAllowedSchemeConfiguration'
+        restrictForAppsCreatedAfterDateTime:
+          pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
+          type: string
+          format: date-time
+          nullable: true
+        spa:
+          $ref: '#/components/schemas/microsoft.graph.redirectUriPlatformAllowedSchemeConfiguration'
+        state:
+          $ref: '#/components/schemas/microsoft.graph.appManagementRestrictionState'
+        web:
+          $ref: '#/components/schemas/microsoft.graph.redirectUriPlatformAllowedSchemeConfiguration'
+      additionalProperties:
+        type: object
+    microsoft.graph.redirectUriWildcardConfiguration:
+      title: redirectUriWildcardConfiguration
+      type: object
+      properties:
+        excludeActors:
+          $ref: '#/components/schemas/microsoft.graph.appManagementPolicyActorExemptions'
+        excludeFormats:
+          $ref: '#/components/schemas/microsoft.graph.redirectUriWildcardExcludeFormats'
+        isStateSetByMicrosoft:
+          type: boolean
+          readOnly: true
+        restrictForAppsCreatedAfterDateTime:
+          pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
+          type: string
+          format: date-time
+          nullable: true
+        state:
+          $ref: '#/components/schemas/microsoft.graph.appManagementRestrictionState'
+      additionalProperties:
+        type: object
     microsoft.graph.transformationAttribute:
       title: transformationAttribute
       type: object
@@ -121823,6 +122031,62 @@ components:
               $ref: '#/components/schemas/microsoft.graph.customSecurityAttributeComparisonOperator'
           additionalProperties:
             type: object
+    microsoft.graph.redirectUriPlatformBlockedDomainConfiguration:
+      title: redirectUriPlatformBlockedDomainConfiguration
+      type: object
+      properties:
+        blockedDomains:
+          type: array
+          items:
+            type: string
+      additionalProperties:
+        type: object
+    microsoft.graph.redirectUriPlatformBlockedSchemeConfiguration:
+      title: redirectUriPlatformBlockedSchemeConfiguration
+      type: object
+      properties:
+        blockedSchemes:
+          type: array
+          items:
+            type: string
+        exemptFormats:
+          type: array
+          items:
+            type: string
+      additionalProperties:
+        type: object
+    microsoft.graph.redirectUriPlatformAllowedDomainConfiguration:
+      title: redirectUriPlatformAllowedDomainConfiguration
+      type: object
+      properties:
+        allowedDomains:
+          type: array
+          items:
+            type: string
+      additionalProperties:
+        type: object
+    microsoft.graph.redirectUriPlatformAllowedSchemeConfiguration:
+      title: redirectUriPlatformAllowedSchemeConfiguration
+      type: object
+      properties:
+        allowedSchemes:
+          type: array
+          items:
+            type: string
+      additionalProperties:
+        type: object
+    microsoft.graph.redirectUriWildcardExcludeFormats:
+      title: redirectUriWildcardExcludeFormats
+      type: object
+      properties:
+        excludeWildcardsInPath:
+          type: boolean
+        excludeWildcardsInPathWithDomains:
+          type: array
+          items:
+            type: string
+      additionalProperties:
+        type: object
     microsoft.graph.attributeMapping:
       title: attributeMapping
       type: object
