add cla to required checks on main

--- a/.github/policies/msgraph-sdk-powershell-branch-protection.yml
+++ b/.github/policies/msgraph-sdk-powershell-branch-protection.yml
@@ -69,6 +69,7 @@ configuration:
     requiresLinearHistory: false
     # Required status checks to pass before merging. Values can be any string, but if the value does not correspond to any existing status check, the status check will be stuck on pending for status since nothing exists to push an actual status
     requiredStatusChecks:
+    - license/cla
     - GitOps/AdvancedSecurity
     # Require branches to be up to date before merging. Requires requiredStatusChecks. boolean
     requiresStrictStatusChecks: true
